# cask

./: .clang-format  .clang-format-include  .clang-tidy  .cppcheck_suppressions  .gitignore  .tool-versions  CHANGELOG.md  Doxyfile  README.md  VERSION  arm.ini  automatic_release.py  codecov.yml  meson.build  meson_options.txt  mips.ini  regenerate_env.sh  soak_test.sh
.github/workflows/: cask.yml  codeql-analysis.yml  release.yml
bench/: BenchErased.cpp  BenchFlatMap.cpp  BenchPool.cpp  main.cpp  meson.build
include/cask/: BufferRef.hpp  Cancelable.hpp  Config.hpp.in  Deferred.hpp  Either.hpp  Erased.hpp  Fiber.hpp  FiberOp.hpp  FiberValue.hpp  List.hpp  MVar.hpp  None.hpp  Observable.hpp  Observer.hpp  Pool.hpp  Promise.hpp  Queue.hpp  Ref.hpp  Resource.hpp  Scheduler.hpp  Task.hpp  meson.build
include/cask/deferred/: FiberDeferred.hpp  MapDeferred.hpp  PromiseDeferred.hpp  PureDeferred.hpp  PureErrorDeferred.hpp  meson.build
include/cask/fiber/: CurrentFiber.hpp  FiberImpl.hpp  FiberMap.hpp  FiberOp.hpp  FiberValue.hpp  meson.build
include/cask/list/: ListEntry.hpp  Nil.hpp  meson.build
include/cask/mvar/: MVarState.hpp  meson.build
include/cask/observable/: AppendAllObservable.hpp  AppendAllObserver.hpp  BufferObservable.hpp  BufferObserver.hpp  CallbackObserver.hpp  CancelObservable.hpp  DeferObservable.hpp  DeferTaskObservable.hpp  DistinctUntilChangedObservable.hpp  DistinctUntilChangedObserver.hpp  EmptyObservable.hpp  EvalObservable.hpp  FilterObservable.hpp  FilterObserver.hpp  FlatMapObservable.hpp  FlatMapObserver.hpp  FlatScanObservable.hpp  FlatScanObserver.hpp  ForeachObserver.hpp  ForeachTaskObserver.hpp  GuaranteeObservable.hpp  GuaranteeObserver.hpp  LastObserver.hpp  MapBothTaskObservable.hpp  MapBothTaskObserver.hpp  MapErrorObservable.hpp  MapErrorObserver.hpp  MapObservable.hpp  MapObserver.hpp  MapTaskObservable.hpp  MapTaskObserver.hpp  MergeObservable.hpp  MergeObserver.hpp  QueueObservable.hpp  QueueObserver.hpp  QueueOverflowStrategy.hpp  RepeatTaskObservable.hpp  ScanTaskObservable.hpp  ScanTaskObserver.hpp  SwitchMapObservable.hpp  (+6 more)
include/cask/observable/switchmap/: SwitchMapInternalObserver.hpp  SwitchMapState.hpp  meson.build
include/cask/pool/: BlockPool.hpp  InternalPool.hpp  meson.build
include/cask/queue/: QueueState.hpp  meson.build
include/cask/scheduler/: BenchScheduler.hpp  ReadyQueue.hpp  SingleThreadScheduler.hpp  SpinLock.hpp  ThreadPoolScheduler.hpp  ThreadStartBarrier.hpp  WorkStealingScheduler.hpp  meson.build
include/cask/trampoline/: TrampolineOp.hpp  TrampolineRunLoop.hpp
src/: meson.build
src/cask/: Erased.cpp  FiberOp.cpp  FiberValue.cpp  Pool.cpp  Scheduler.cpp  TrampolineOp.cpp  TrampolineRunLoop.cpp
src/cask/fiber/: CurrentFiber.cpp  FiberOp.cpp  FiberValue.cpp
src/cask/pool/: InternalPool.cpp
src/cask/scheduler/: BenchScheduler.cpp  ReadyQueue.cpp  SingleThreadScheduler.cpp  SpinLock.cpp  ThreadPoolScheduler.cpp  ThreadStartBarrier.cpp  WorkStealingScheduler.cpp
subprojects/: concurrentqueue.wrap  immer.wrap  trompeloeil.wrap
subprojects/packagefiles/concurrentqueue-1.0.2-patch/: meson.build
subprojects/packagefiles/immer-latest-patch/: meson.build
subprojects/packagefiles/trompeloeil-40-patch/: meson.build
test/: SchedulerTestBench.hpp  meson.build  playground.cpp
test/cask/: TestEither.cpp  TestErased.cpp  TestFiber.cpp  TestList.cpp  TestMVar.cpp  TestObservable.cpp  TestPool.cpp  TestPromiseDeferred.cpp  TestQueue.cpp  TestRef.cpp  TestResource.cpp  TestScheduler.cpp  TestTask.cpp  TestTrampoline.cpp
test/cask/fiber/: TestFiberOp.cpp  TestFiberValue.cpp
test/cask/mvar/: TestMVarState.cpp
test/cask/observable/: TestObservableAppendAll.cpp  TestObservableBuffer.cpp  TestObservableCancel.cpp  TestObservableConcat.cpp  TestObservableDistinctUntilChanged.cpp  TestObservableDistinctUntilChangedBy.cpp  TestObservableFilter.cpp  TestObservableFlatMap.cpp  TestObservableFlatMapOptional.cpp  TestObservableFlatScan.cpp  TestObservableFlatten.cpp  TestObservableForeach.cpp  TestObservableForeachTask.cpp  TestObservableFromTask.cpp  TestObservableGuarantee.cpp  TestObservableLast.cpp  TestObservableMap.cpp  TestObservableMapBothTask.cpp  TestObservableMapError.cpp  TestObservableMapTask.cpp  TestObservableMerge.cpp  TestObservableMergeAll.cpp  TestObservableMergeMap.cpp  TestObservableNever.cpp  TestObservableQueue.cpp  TestObservableRepeatTask.cpp  TestObservableScan.cpp  TestObservableScanTask.cpp  TestObservableSwitchMap.cpp  TestObservableTake.cpp  TestObservableTakeWhile.cpp  TestObservableTakeWhileInclusive.cpp
test/cask/scheduler/: TestBenchScheduler.cpp  TestReadyQueue.cpp  TestScheduler.cpp  TestSingleThreadScheduler.cpp  TestThreadPoolScheduler.cpp  TestWorkStealingScheduler.cpp
test/cask/task/: TestTaskAssignment.cpp  TestTaskAsyncBoundary.cpp  TestTaskDefer.cpp  TestTaskDeferFiber.cpp  TestTaskDelay.cpp  TestTaskDoOnCancel.cpp  TestTaskEval.cpp  TestTaskFlatMapBoth.cpp  TestTaskFlatMapError.cpp  TestTaskGuarantee.cpp  TestTaskMapBoth.cpp  TestTaskNever.cpp  TestTaskNone.cpp  TestTaskOnCancelRaiseError.cpp  TestTaskPure.cpp  TestTaskRace.cpp  TestTaskRaiseError.cpp  TestTaskRecover.cpp  TestTaskTimeout.cpp
