cask_sources = [
    'cask/FiberOp.cpp',
    'cask/FiberValue.cpp',
    'cask/Scheduler.cpp',
    'cask/scheduler/BenchScheduler.cpp',
    'cask/scheduler/SingleThreadScheduler.cpp',
    'cask/scheduler/ThreadPoolScheduler.cpp'
]

cask_lib = static_library('cask',
    cask_sources,
    include_directories: includes,
    dependencies: dependencies
)

