install_headers(
    'AppendAllObservable.hpp',
    'AppendAllObserver.hpp',
    'BufferObservable.hpp',
    'BufferObserver.hpp',
    'CallbackObserver.hpp',
    'CancelObservable.hpp',
    'DeferObservable.hpp',
    'DeferTaskObservable.hpp',
    'DistinctUntilChangedObservable.hpp',
    'DistinctUntilChangedObserver.hpp',
    'EmptyObservable.hpp',
    'EvalObservable.hpp',
    'FilterObservable.hpp',
    'FilterObserver.hpp',
    'FlatMapObservable.hpp',
    'FlatMapObserver.hpp',
    'FlatScanObservable.hpp',
    'FlatScanObserver.hpp',
    'GuaranteeObservable.hpp',
    'GuaranteeObserver.hpp',
    'LastObserver.hpp',
    'MapErrorObservable.hpp',
    'MapErrorObserver.hpp',
    'MapObservable.hpp',
    'MapObserver.hpp',
    'MapTaskObservable.hpp',
    'MapTaskObserver.hpp',
    'MergeObservable.hpp',
    'MergeObserver.hpp',
    'QueueObservable.hpp',
    'QueueObserver.hpp',
    'QueueOverflowStrategy.hpp',
    'RepeatTaskObservable.hpp',
    'ScanTaskObservable.hpp',
    'ScanTaskObserver.hpp',
    'SwitchMapObservable.hpp',
    'SwitchMapObserver.hpp',
    'TakeObserver.hpp',
    'TakeWhileObservable.hpp',
    'TakeWhileObserver.hpp',
    'VectorObservable.hpp',
    subdir: 'cask/observable')

subdir('switchmap')